# QT_OpenGL

./: .editorconfig  CMakeLists.txt  README.md
source/: CMakeLists.txt  main.cpp
source/QT/: MainWindow.h
source/QT/intern/: MainWindow.cpp
source/graphics/: Transform3D.h  Vertex.h  Window.h
source/graphics/intern/: Transform3D.cpp  Window.cpp
source/shaders/: simple.frag  simple.vert
source/vertex_data/: Cube.h  Triangle.h
tests/: CMakeLists.txt
